# SPDX-License-Identifier: AGPL-3.0-or-later
[package]
name = "copybook-fuzz"
version = "0.0.0"
publish = false
edition = "2024"
rust-version = "1.92"
authors = ["Steven Zimmerman, CPA <git@effortlesssteven.com>"]
license = "AGPL-3.0-or-later"
description = "Fuzz targets for copybook-core and copybook-codec"
repository = "https://github.com/EffortlessMetrics/copybook-rs"
homepage = "https://github.com/EffortlessMetrics/copybook-rs"
readme = "README.md"
keywords = ["cobol", "copybook", "fuzz", "testing", "ebcdic"]
categories = ["development-tools::fuzzing", "development-tools::testing"]

[package.metadata]
cargo-fuzz = true

[lints]
workspace = true

[dependencies]
libfuzzer-sys = "0.4.10"
copybook-core = { path = "../copybook-core" }
copybook-codec = { path = "../copybook-codec" }
copybook-fixed = { path = "../copybook-fixed" }
copybook-rdw = { path = "../copybook-rdw" }
copybook-determinism = { path = "../copybook-determinism" }
copybook-options = { path = "../copybook-options" }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"

# Prevent this from interfering with workspaces
[workspace]
members = ["."]

[workspace.lints.rust]
unsafe_code = "forbid"

[[bin]]
name = "copybook_parse"
path = "fuzz_targets/copybook_parse.rs"

[[bin]]
name = "binary_decode"
path = "fuzz_targets/binary_decode.rs"

[[bin]]
name = "json_encode"
path = "fuzz_targets/json_encode.rs"

[[bin]]
name = "pic_clause"
path = "fuzz_targets/pic_clause.rs"

[[bin]]
name = "occurs_odo"
path = "fuzz_targets/occurs_odo.rs"

[[bin]]
name = "redefines"
path = "fuzz_targets/redefines.rs"

[[bin]]
name = "rdw_header"
path = "fuzz_targets/rdw_header.rs"

[[bin]]
name = "fixed_record"
path = "fuzz_targets/fixed_record.rs"

[[bin]]
name = "determinism_compare"
path = "fuzz_targets/determinism_compare.rs"

[[bin]]
name = "options_contract"
path = "fuzz_targets/options_contract.rs"
