# SPDX-License-Identifier: AGPL-3.0-or-later
[package]
name = "copybook-fuzz"
version = "0.0.0"
publish = false
edition = "2024"
rust-version = "1.92"
authors = ["Steven Zimmerman, CPA <git@effortlesssteven.com>"]
license = "AGPL-3.0-or-later"
description = "Fuzz targets for copybook-core and copybook-codec"
repository = "https://github.com/EffortlessMetrics/copybook-rs"
homepage = "https://github.com/EffortlessMetrics/copybook-rs"
readme = "README.md"
keywords = ["cobol", "copybook", "fuzz", "testing", "ebcdic"]
categories = ["development-tools::fuzzing", "development-tools::testing"]

[package.metadata]
cargo-fuzz = true

[lints]
workspace = true

[dependencies]
libfuzzer-sys = "0.4.10"
copybook-core = { path = "../crates/copybook-core" }
copybook-codec = { path = "../crates/copybook-codec" }
copybook-cli-determinism = { path = "../crates/copybook-cli-determinism" }
copybook-lexer = { path = "../crates/copybook-lexer" }
copybook-fixed = { path = "../crates/copybook-fixed" }
copybook-corruption = { path = "../crates/copybook-corruption" }
copybook-rdw = { path = "../crates/copybook-rdw" }
copybook-record-io = { path = "../crates/copybook-record-io" }
copybook-determinism = { path = "../crates/copybook-determinism" }
copybook-options = { path = "../crates/copybook-options" }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"

# Prevent this from interfering with workspaces
[workspace]
members = ["."]

[workspace.lints.rust]
unsafe_code = "forbid"

[[bin]]
name = "copybook_parse"
path = "fuzz_targets/copybook_parse.rs"

[[bin]]
name = "lexer"
path = "fuzz_targets/lexer.rs"

[[bin]]
name = "binary_decode"
path = "fuzz_targets/binary_decode.rs"

[[bin]]
name = "corruption"
path = "fuzz_targets/corruption.rs"

[[bin]]
name = "json_encode"
path = "fuzz_targets/json_encode.rs"

[[bin]]
name = "pic_clause"
path = "fuzz_targets/pic_clause.rs"

[[bin]]
name = "occurs_odo"
path = "fuzz_targets/occurs_odo.rs"

[[bin]]
name = "redefines"
path = "fuzz_targets/redefines.rs"

[[bin]]
name = "rdw_header"
path = "fuzz_targets/rdw_header.rs"

[[bin]]
name = "fixed_record"
path = "fuzz_targets/fixed_record.rs"

[[bin]]
name = "determinism_compare"
path = "fuzz_targets/determinism_compare.rs"

[[bin]]
name = "cli_determinism_render"
path = "fuzz_targets/cli_determinism_render.rs"

[[bin]]
name = "options_contract"
path = "fuzz_targets/options_contract.rs"

[[bin]]
name = "record_io_dispatch"
path = "fuzz_targets/record_io_dispatch.rs"
