[package]
name = "xtask"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Project automation xtasks for copybook-rs"
publish = false

[[bin]]
name = "xtask"
path = "src/main.rs"

[lib]
name = "xtask"
path = "src/lib.rs"

[dependencies]
anyhow.workspace = true
roxmltree = "0.21.1"
regex.workspace = true
serde = { version = "1.0.228", features = ["derive"] }
serde_json.workspace = true
serde_plain.workspace = true
chrono = { version = "0.4.43", default-features = false, features = ["std", "clock"] }
copybook-core = { path = "../copybook-core" }
copybook-bench = { path = "../copybook-bench" }
num_cpus = "1.17.0"

[dev-dependencies]
assert_cmd.workspace = true
tempfile.workspace = true
