[package]
name = "xtask"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Project automation xtasks for copybook-rs"
readme = "README.md"
publish = false

[[bin]]
name = "xtask"
path = "src/main.rs"

[lib]
name = "xtask"
path = "src/lib.rs"

[dependencies]
anyhow.workspace = true
roxmltree = { workspace = true }
regex.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
serde_plain.workspace = true
chrono = { workspace = true, features = ["std", "clock"] }
copybook-core = { workspace = true }
copybook-bench = { workspace = true }
num_cpus = { workspace = true }

[lints]
workspace = true

[dev-dependencies]
assert_cmd.workspace = true
tempfile.workspace = true
